About info overflow fix

--- a/includes/css/page-template.css
+++ b/includes/css/page-template.css
@@ -21,15 +21,6 @@ body {
   -ms-animation: fadeInUp ease-in-out 1.2s;
 }
 
-[class*=content] {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    background: rgb(255, 255, 255);
-}
-
-
 [class*=scroll-area] {
   width: 100vw;
   height: 70vh;
@@ -61,12 +52,15 @@ body {
 
 
 [class*=scroll-content-section] {
+  display: flex;
+  justify-content: center;
   width: 100vw;
   height: 65vh;
   font-family: 'Source Sans Pro', sans-serif; 
   line-height: 2; 
   font-size: 24px; 
-  padding: 40px; 
+  padding: 9vh; 
+  margin-bottom: 70px;
   overflow: scroll;
   /* padding-right: 60px; */
 }
